<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="glide">Glide - Image Loading Library by BumpTech</string>
    <string name="loadapp">LoadApp - Current repository by Udacity</string>
    <string name="retrofit">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>

    <string name="channel_id" translatable="false">channel</string>
    <string name="channel_name" translatable="false">channel</string>
    <string name="channel_description" translatable="false">channel</string>

    <string name="toast_message">Please select file to download</string>



    <string name="file_name">File name: </string>
    <string name="status">Status: </string>


    <string name="status_id">statusId</string>
    <string name="color_id">colorId</string>
    <string name="message_id">messageId</string>

    <string name="success">Success</string>
    <string name="failed">Failed</string>
</resources>
